Fixed layout issues by expanding zones

--- a/styles/index.css
+++ b/styles/index.css
@@ -42,11 +42,11 @@ body, html {
 }
 
 .fifty {
-  height: 50%;
+  height: 70%;
 }
 
 .eighty {
-  height: 80%;
+  height: 90%;
 }
 
 nav {
